--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,14 +18,14 @@
   <div class="row mb-3">
     <%= form.label :password, class: 'col-sm-2 col-form-label' %>
     <div class="col-sm-10">
-      <%= form.text_field :password, class: 'form-control' %>
+      <%= form.text_field :password, class: 'form-control', type: "password" %>
     </div>
   </div>
   
   <div class="row mb-3">
     <%= form.label :password_confirmation, class: 'col-sm-2 col-form-label col-form-label-sm' %>
     <div class="col-sm-10">
-      <%= form.text_field :password_confirmation, class: 'form-control' %>
+      <%= form.text_field :password_confirmation, class: 'form-control', type: "password" %>
     </div>
   </div>
 
