--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -30,6 +30,6 @@
   </div>
 
   <div class="d-grid gap-2 col-6 mx-auto">
-    <%= form.submit @buttonText, class: "btn btn-primary active", type: "button" %>
+    <%= form.submit @buttonText, class: "btn btn-primary active" %>
   </div>
 <% end %>
