--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,16 +1,23 @@
 <% provide(:title, 'Edit User') %>
-<div class="container-sm">
-  <h1>Editing User</h1>
 
+<h1>Editing User</h1>
+
+<div class="row justify-content-md-center">
+  <div class="col-md-6 col-md-offset-3">
   <%= render 'form', user: @user %>
 
   <div class="gravatar_edit">
     <%= gravatar_for @user %>
     <a href="http://gravatar.com/emails" class="btn btn-outline-secondary" target="_blank">Change</a>
   </div>
-    
-  <center>    
-    <%= link_to 'Show', @user, class: "btn btn-outline-secondary", role: "button" %>
+  
+  
+  </div>
+</div>
+<p></p>
+<div class="row justify-content-md-center">
+  <div class="col-md-6 col-md-offset-3">
     <%= link_to 'Back', users_path, class: "btn btn-secondary active", role: "button" %>
-  </center>
+    <%= link_to 'Show', @user, class: "btn btn-outline-secondary", role: "button" %>
+  </div>
 </div>
