--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,9 @@
 <% provide(:title, 'Sign up') %>
-<div class="container-sm">
-  <h1>Sign up</h1>
 
-  <%= render 'form', user: @user %>
-  
-  <div class="d-grid gap-2 col-6 mx-auto">
-    <%= link_to 'Back', users_path, class: "btn btn-secondary active", role: "button" %>
+<h1>Sign up</h1>
+
+<div class="row justify-content-md-center">
+  <div class="col-md-6 col-md-offset-3">
+    <%= render 'form', user: @user %>
   </div>
 </div>
